--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
+header {
+    color: rgb(0, 0, 0);
+    font-size: 0.8cm;
+    font-weight:bold;
+    margin-bottom: 0.2cm;
+    text-align:left;
+}
+subtitle{
+    color: rgb(0, 0, 0);
+    font-size: 0.5cm;
+    font-weight:bold;
+    display: block;
+    margin-block-start: 0px;
+    margin-block-end: 20px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+.input_data {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 20px;
+    width: 30%;
+}
+input[type=number], select {
+  width: 100%;
+  padding: 8px 20px;
+  margin: 10px 10px 10px 5px;
+  display:list-item;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+element.style {
+    margin: 10px;
+}
+label {
+    cursor: default;
+}
