--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,39 +1,164 @@
-header {
-    color: rgb(0, 0, 0);
-    font-size: 0.8cm;
-    font-weight:bold;
-    margin-bottom: 0.2cm;
-    text-align:left;
-}
-.subtitle{
-    color: rgb(0, 0, 0);
-    font-size: 0.5cm;
-    font-weight:bold;
-    display: block;
-    margin-block-start: 0px;
-    margin-block-end: 20px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-.input_data {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    margin: 20px;
-    width: 30%;
-}
-input[type=number], select {
+.navbar {
+  overflow: hidden;
+  background-color: rgb(97, 97, 97);
   width: 100%;
-  padding: 8px 20px;
-  margin: 10px 10px 10px 5px;
-  display:list-item;
-  border: 1px solid #ccc;
+}
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
   border-radius: 4px;
-  box-sizing: border-box;
 }
-element.style {
-    margin: 10px;
+.topnav-right {
+  float: right;
 }
-label {
-    cursor: default;
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: rgb(72, 70, 88);
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.accordion {
+  background-color: rgb(204, 204, 204);
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+  font-weight: bold;
+  transition: 1s;
+}
+.accordion:hover {
+  background-color: rgb(172, 171, 171);
+}
+.accordion:after {
+  font-size: 20px;
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  transition: 1s;
+}
+.active:after {
+  content: '\2212';
+  transition: 1s;
+}
+.panel {
+   width: 100%;
+    padding: 0px 0px 20px 0px;
+    margin: 0px 0px 20px 0px;
+    background-color: #f2f2f2;
+}
+.input_data{
+    padding: 10px;
+    background-color: rgba(240, 240, 240, 0.555);
+    width: 40%;
+    border-radius: 4px;
+    
+}
+.input_label{
+    display: block;
+    padding: 10px 0px 5px 10px;
+    margin: 0px 10px;
+    font-size: 19px;
+    font-weight: bold;
+}
+.input_select{
+    width : 90%;
+    padding: 6px 6px;
+    margin: auto;
+    margin-top: 5px;
+    display: list-item;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+.dbLx_selection{
+    display: inline-block;  
+    width: 42%;
+    padding: 6px 6px;
+    margin: 0% 2.5% 0% 5%;
+    border:1px solid #ccc;
+    border-radius: 4px;
+}
+.dbLy_selection{
+    display: inline-block;
+    width: 42%;
+    padding: 6px 6px;
+    margin: 0% 0% 0% 3.5%;
+    border:1px solid #ccc;
+    border-radius: 4px;
+}
+.info{
+    float: right;
+    position: relative;
+    font-size: 18px;
+    color: rgb(105, 104, 104);
+    margin: 0px 5px;
+}
+.info .tooltip {
+    visibility: hidden;
+    width: 120px;
+    height: auto;
+    background-color:rgb(105, 104, 104);
+    color: white;
+    text-align: center;
+    font-size: 15px;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    left:150%;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+.info .tooltip::after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: -5%;
+  border-style: solid;
+  border-color: transparent rgb(105, 104, 104) transparent transparent;
+}
+.info:hover .tooltip{
+    visibility: visible;
+    overflow:visible !important;
+    opacity: 1;
 }
