--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 <div class="navbar">
   <a href="#home"><i class="fa fa-fw fa-home"></i> Home </a>
   <a href="#search"><i class="fa fa-search"></i> Search</a>
@@ -17,30 +20,54 @@
 </div>
 
 <div class="input_data">
-
   <button class="accordion" (click)="shrinkContent(0)">Materials</button>
   <div class="panel">
     <!-- Concrete -->
-    <label class="input_label">Concrete
+    <label class="input_label"
+      >Concrete
       <div class="info">
         <i class="fa fa-info-circle" aria-hidden="true"></i>
         <span class="tooltip">Test tooltip bars 1234567890123</span>
       </div>
     </label>
 
-    <select class='input_select' #myConcrete (change)='getSelection("concreteTypeList", myConcrete.value)'>
-      <option *ngFor='let option of concreteTypeList' [value]="option">{{option}}</option>
+    <select
+      class="input_select"
+      #myConcrete
+      (change)="params.concreteTypeList = myConcrete.value"
+    >
+      <option *ngFor="let option of concreteTypeList" [value]="option">
+        {{ option }}
+      </option>
     </select>
-    <ng-container *ngIf="dict['concreteTypeList'] == 'other'">
-      <input class="input_select" type="number" step="any" min="0" placeholder="fc">
+    <ng-container *ngIf="params.concreteTypeList == 'other'">
+      <input
+        class="input_select"
+        type="number"
+        step="any"
+        min="0"
+        placeholder="fc"
+      />
     </ng-container>
     <!-- Stell -->
     <label class="input_label">Steel</label>
-    <select class='input_select' #mySteel (change)='getSelection("steelTypeList", mySteel.value)'>
-      <option *ngFor='let option of steelTypeList' [value]="option">{{option}}</option>
+    <select
+      class="input_select"
+      #mySteel
+      (change)="params.steelTypeList = mySteel.value"
+    >
+      <option *ngFor="let option of steelTypeList" [value]="option">
+        {{ option }}
+      </option>
     </select>
-    <ng-container *ngIf="dict['steelTypeList'] == 'other'">
-      <input class="input_select" type="number" step="any" min="0" placeholder="fy">
+    <ng-container *ngIf="params.steelTypeList == 'other'">
+      <input
+        class="input_select"
+        type="number"
+        step="any"
+        min="0"
+        placeholder="fy"
+      />
     </ng-container>
   </div>
   <!-- Support Area -->
@@ -49,90 +76,224 @@
     <div class="panel">
       <!-- SECTION TYPE -->
       <label class="input_label">Section Type</label>
-      <select class='input_select' #mySection (change)='getSelection("sectionType", mySection.value)'>
-        <option *ngFor='let option of sectionTypeList' [value]="option">{{option}}</option>
+      <select
+        class="input_select"
+        #mySection
+        (change)="params.sectionType = mySection.value"
+      >
+        <option *ngFor="let option of sectionTypeList" [value]="option">
+          {{ option }}
+        </option>
       </select>
-      <ng-container *ngIf="dict['sectionType'] == 'Rectangular'">
+      <ng-container *ngIf="params.sectionType == 'Rectangular'">
         <label class="input_label">Section width</label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="cx">
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="cx"
+        />
         <label class="input_label">Section height</label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="cy">
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="cy"
+        />
       </ng-container>
-      <ng-container *ngIf="dict['sectionType'] == 'Circular'">
+      <ng-container *ngIf="params.sectionType == 'Circular'">
         <label class="input_label">Section Diameter</label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="D">
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="D"
+        />
       </ng-container>
       <!-- POSITION -->
       <label class="input_label">Position</label>
-      <select class='input_select' #myPosition (change)='getSelection("position", myPosition.value)'>
-        <option *ngFor='let option of positionList' [value]="option">{{option}}</option>
+      <select
+        class="input_select"
+        #myPosition
+        (change)="params.position = myPosition.value"
+      >
+        <option *ngFor="let option of positionList" [value]="option">
+          {{ option }}
+        </option>
       </select>
-      <ng-container *ngIf="dict['position'] == 'Corner'">
-        <label class="input_label">Distance from free edge to column face (x-axis)</label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="dx">
-        <label class="input_label">Distance from free edge to column face (y-axis)</label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="dy">
+      <ng-container *ngIf="params.position == 'Corner'">
+        <label class="input_label"
+          >Distance from free edge to column face (x-axis)</label
+        >
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="dx"
+        />
+        <label class="input_label"
+          >Distance from free edge to column face (y-axis)</label
+        >
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="dy"
+        />
       </ng-container>
-      <ng-container *ngIf="dict['position'] == 'Edge'">
+      <ng-container *ngIf="params.position == 'Edge'">
         <label class="input_label">Axis</label>
-        <select class='input_select' #myAxis (change)='getSelection("axis", myAxis.value)'>
-          <option *ngFor='let option of axisList' [value]="option">{{option}}</option>
+        <select
+          class="input_select"
+          #myAxis
+          (change)="params.axis = myAxis.value"
+        >
+          <option *ngFor="let option of axisList" [value]="option">
+            {{ option }}
+          </option>
         </select>
-        <ng-container *ngIf="dict['axis'] == 'X'">
-          <label class="input_label"> Distance from free edge to column face</label>
-          <input class="input_select" type="number" step="any" min="0" placeholder="dx">
+        <ng-container *ngIf="params.axis == 'X'">
+          <label class="input_label">
+            Distance from free edge to column face</label
+          >
+          <input
+            class="input_select"
+            type="number"
+            step="any"
+            min="0"
+            placeholder="dx"
+          />
         </ng-container>
-        <ng-container *ngIf="dict['axis'] == 'Y'">
-          <label class="input_label">Distance from free edge to column face</label>
-          <input class="input_select" type="number" step="any" min="0" placeholder="dy">
+        <ng-container *ngIf="params.axis == 'Y'">
+          <label class="input_label"
+            >Distance from free edge to column face</label
+          >
+          <input
+            class="input_select"
+            type="number"
+            step="any"
+            min="0"
+            placeholder="dy"
+          />
         </ng-container>
       </ng-container>
     </div>
     <!-- Slab element-->
-    <button class="accordion" (click)="shrinkContent(2)">Slab
-      Element</button>
+    <button class="accordion" (click)="shrinkContent(2)">Slab Element</button>
     <div class="panel">
       <label class="input_label">Elemtn Types</label>
-      <select class='input_select' #mySlab (change)='getSelection("elementType", mySlab.value)'>
-        <option *ngFor='let option of elementTypeList' [value]="option">{{option}}</option>
+      <select
+        class="input_select"
+        #mySlab
+        (change)="params.elementType = mySlab.value"
+      >
+        <option *ngFor="let option of elementTypeList" [value]="option">
+          {{ option }}
+        </option>
       </select>
-      <ng-container *ngIf="dict['elementType'] == 'Foot'">
-        <label class=input_label>Length</label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="bx">
-        <label class=input_label>Width</label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="by">
+      <ng-container *ngIf="params.elementType == 'Foot'">
+        <label class="input_label">Length</label>
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="bx"
+        />
+        <label class="input_label">Width</label>
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="by"
+        />
       </ng-container>
-      <ng-container *ngIf="dict['elementType'] == 'Slab' || dict['elementType'] == 'Foot'">
-        <label class=input_label>Height</label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="hf">
-        <label class=input_label>Nominal Cover
+      <ng-container
+        *ngIf="params.elementType == 'Slab' || params.elementType == 'Foot'"
+      >
+        <label class="input_label">Height</label>
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="hf"
+        />
+        <label class="input_label"
+          >Nominal Cover
           <div class="info">
             <i class="fa fa-info-circle" aria-hidden="true"></i>
-            <span class="tooltip">The distance between the exposed concrete surface to nearest reinforcement bar</span>
+            <span class="tooltip"
+              >The distance between the exposed concrete surface to nearest
+              reinforcement bar</span
+            >
           </div>
         </label>
-        <input class="input_select" type="number" step="any" min="0" placeholder="cnom">
-        <label class=input_label>Diameter of reinforcing bars</label>
-        <select class='dbLx_selection' #mybar_x
-          (change)='getSelection("diameterOfReinforcingBars_xAxisList", mybar_x.value)'>
-          <option class='dbLx_selection' *ngFor='let option of diameterOfReinforcingBars_xAxisList' [value]="option">
-            {{option}}</option>
+        <input
+          class="input_select"
+          type="number"
+          step="any"
+          min="0"
+          placeholder="cnom"
+        />
+        <label class="input_label">Diameter of reinforcing bars</label>
+        <select
+          class="dbLx_selection"
+          #mybar_x
+          (change)="params.diameterOfReinforcingBars_xAxisList = mybar_x.value"
+        >
+          <option
+            class="dbLx_selection"
+            *ngFor="let option of diameterOfReinforcingBars_xAxisList"
+            [value]="option"
+          >
+            {{ option }}
+          </option>
         </select>
-        <select class='dbLy_selection' #mybar_y
-          (change)='getSelection("diameterOfReinforcingBars_yAxisList", mybar_y.value)'>
-          <option class='dbLy_selection' *ngFor='let option of diameterOfReinforcingBars_yAxisList' [value]="option">
-            {{option}}</option>
+        <select
+          class="dbLy_selection"
+          #mybar_y
+          (change)="params.diameterOfReinforcingBars_yAxisList = mybar_y.value"
+        >
+          <option
+            class="dbLy_selection"
+            *ngFor="let option of diameterOfReinforcingBars_yAxisList"
+            [value]="option"
+          >
+            {{ option }}
+          </option>
         </select>
-        <ng-container *ngIf="dict['diameterOfReinforcingBars_xAxisList'] == 'other'">
-          <input class="input_select" type="number" step="any" min="0" placeholder="dbLx">
+        <ng-container
+          *ngIf="params.diameterOfReinforcingBars_xAxisList == 'other'"
+        >
+          <input
+            class="input_select"
+            type="number"
+            step="any"
+            min="0"
+            placeholder="dbLx"
+          />
         </ng-container>
-        <ng-container *ngIf="dict['diameterOfReinforcingBars_yAxisList'] == 'other'">
-          <input class="input_select" type="number" step="any" min="0" placeholder="dbLy">
+        <ng-container
+          *ngIf="params.diameterOfReinforcingBars_yAxisList == 'other'"
+        >
+          <input
+            class="input_select"
+            type="number"
+            step="any"
+            min="0"
+            placeholder="dbLy"
+          />
         </ng-container>
       </ng-container>
     </div>
   </div>
-
 </div>
 
 <!-- <div>{{kosmas|async}}</div>
