Fixed: +/- indicators where not updating

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,9 @@
 </div>
 
 <div class="input_data">
-  <button class="accordion" (click)="togglePanel($event)">Materials</button>
+  <button class="accordion active" (click)="togglePanel($event)">
+    Materials
+  </button>
   <div class="panel-v2">
     <div class="panel-content">
       <!-- Concrete -->
