--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 />
 <div class="navbar">
-  <a href="#home"><i class="fa fa-fw fa-home"></i> Home </a>
+  <a [routerLink]="'/home'"><i class="fa fa-fw fa-home"></i> Home </a>
   <a [routerLink]="'/search'"><i class="fa fa-search"></i> Search</a>
   <div class="dropdown">
     <button class="dropbtn">Dropdown <i class="fa fa-caret-down"></i></button>
