--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,7 +1,8 @@
 .navbar {
   overflow: hidden;
-  background-color: rgb(97, 97, 97);
+  background-color: #333333;
   width: 100%;
+  text-align: center;
 }
 .navbar a {
   float: left;
@@ -31,7 +32,8 @@
 }
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-  background-color: rgb(72, 70, 88);
+  //   background-color: rgb(72, 70, 88);
+  color: rgb(206, 198, 198);
 }
 .dropdown-content {
   display: none;
