--- a/src/app/panel/panel.component.scss
+++ b/src/app/panel/panel.component.scss
@@ -8,7 +8,7 @@
   font-weight: bold;
   color: #444;
   background-color: #cccccc;
-  padding: 18px;
+  padding: 15px;
 
   &:after {
     font-size: 20px;
@@ -24,5 +24,5 @@
   }
 }
 .panel-content {
-  padding: 20px;
+  padding: 5px 20px;
 }
